--- a/views/macros/radios.njk
+++ b/views/macros/radios.njk
@@ -5,13 +5,13 @@
             {% if attributes.required %}
                 <span aria-hidden="true" class="required">*</span>
             {% endif %}
-            {{ __(question) }}
+            <h1 class="border-none">{{ __(question) }}</h1>
             {% if attributes.required %}
                 <span class="required">{{ __("required")}}</span>
             {% endif %}
             </legend>
             {% if attributes.hint %}
-                <span class="form-message">{{ __(attributes.hint) }}</span>
+                <span class="form-message">{{ __(attributes.hint) | safe }}</span>
             {% endif %}
             <div class="multiple-choice multiple-choice--radios" id="{{ key }}">
                 {% if errors and errors[key] %}
