--- a/routes/question-leave-voluntarily/question-leave-voluntarily.njk
+++ b/routes/question-leave-voluntarily/question-leave-voluntarily.njk
@@ -5,7 +5,7 @@
     <div>
         <form method="post">
             <input type="hidden" name="_csrf" value="{{ csrfToken }}">
-            {{ radioButtons('leave_voluntarily', { '1':'leave_voluntarily.yes','2':'leave_voluntarily.no'}, data.leave_voluntarily, 'question.leave_voluntarily', errors, { required: true }) }}
+            {{ radioButtons('leave_voluntarily', { '1':'leave_voluntarily.yes','2':'leave_voluntarily.no'}, data.leave_voluntarily, 'question.leave_voluntarily', errors) }}
             {{ formButtons() }}
         </form>
     </div>
