--- a/views/macros/radios.njk
+++ b/views/macros/radios.njk
@@ -2,13 +2,15 @@
     <div class="{{ 'has-error' if errors and errors[key] }}">
         <fieldset class="fieldset">
             <legend class="fieldset__legend">
-            {% if attributes.required %}
-                <span aria-hidden="true" class="required">*</span>
-            {% endif %}
-            <h1 class="border-none">{{ __(question) }}</h1>
-            {% if attributes.required %}
-                <span class="required">{{ __("required")}}</span>
-            {% endif %}
+            <h1 class="border-none">
+                {% if attributes.required %}
+                    <span aria-hidden="true" class="required">*</span>
+                {% endif %}
+                {{ __(question) }}
+                {% if attributes.required %}
+                    <span class="required text-base">{{ __("required")}}</span>
+                {% endif %}
+            </h1>
             </legend>
             {% if attributes.hint %}
                 <span class="form-message">{{ __(attributes.hint) | safe }}</span>
