add a missed option in why-stop-working

--- a/routes/question-why-stop-working/question-why-stop-working.njk
+++ b/routes/question-why-stop-working/question-why-stop-working.njk
@@ -11,7 +11,8 @@
                 '2':'Your employer has closed.',
                 '3':'You’re self-employed and had to close.',
                 '4': 'You’re on unpaid leave from your work.',
-                '5': 'None of the above'
+                '5': 'You quit or were let go due to unsafe working conditions.',
+                '6': 'None of the above'
                 }, data.why_stop_working, 'form.why_stop_working', errors, {hint: 'form.why_stop_working.desc'}, { required: true }) }}
             
             {{ formButtons() }}
