--- a/routes/result-cerb/result-cerb.njk
+++ b/routes/result-cerb/result-cerb.njk
@@ -12,4 +12,9 @@
 
     <p>{{ __('result-cerb.apply') }}</p>
 
+    <form method="post">
+            <input type="hidden" name="_csrf" value="{{ csrfToken }}">
+            {{ formButtons() }}
+        </form>
+
 {% endblock %}
