Adding a header for the results pages

--- a/routes/result-waiting-to-hear-back-from-ei/result-waiting-to-hear-back-from-ei.njk
+++ b/routes/result-waiting-to-hear-back-from-ei/result-waiting-to-hear-back-from-ei.njk
@@ -2,6 +2,7 @@
 
 {% block content %}
 
+    {{ headerLinkResult() }}
     <h1>{{ __('result-waiting-to-hear-back-from-ei.title') }}</h1>
 
     <div class="my-12">
