--- a/routes/result-ccb-and-gst/result-ccb-and-gst.njk
+++ b/routes/result-ccb-and-gst/result-ccb-and-gst.njk
@@ -1,7 +1,7 @@
 {% extends "base.njk" %}
 
 {% block content %}
-
+    {{ headerLinkResult() }}
     <h1>{{ __('result-ccb-and-gst.title') }}</h1>
 
     <div class="mt-12">
