Adding the Header Link for the questions

--- a/routes/question-lost-job-c19/question-lost-job-c19.njk
+++ b/routes/question-lost-job-c19/question-lost-job-c19.njk
@@ -3,6 +3,7 @@
 {% block content %}
 
     <div>
+        {{ headerLinkQuestion() }}
         <form method="post">
             <input type="hidden" name="_csrf" value="{{ csrfToken }}">
             
