--- a/routes/result-cerb/result-cerb.njk
+++ b/routes/result-cerb/result-cerb.njk
@@ -2,6 +2,7 @@
 
 {% block content %}
 
+    {{ headerLinkResult() }}
     <h1>{{ __('result-cerb.title') }}</h1>
 
     <p>{{ __('result-cerb.intro') }}</p>
