--- a/routes/result-ei-regular/result-ei-regular.njk
+++ b/routes/result-ei-regular/result-ei-regular.njk
@@ -2,6 +2,7 @@
 
 {% block content %}
 
+    {{ headerLinkResult() }}
     <h1>{{ __('result-ei-regular.title') }}</h1>
 
     <p>{{ __('result-ei-regular.content') | safe }}</p>
