--- a/routes/question-applied-to-EI/question-applied-to-EI.njk
+++ b/routes/question-applied-to-EI/question-applied-to-EI.njk
@@ -2,6 +2,7 @@
 
 {% block content %}
     <div>
+        {{ headerLinkQuestion() }}
         <form method="post">
             <input type="hidden" name="_csrf" value="{{ csrfToken }}">
             
