--- a/routes/question-your-situation/question-your-situation.njk
+++ b/routes/question-your-situation/question-your-situation.njk
@@ -3,6 +3,7 @@
 {% block content %}
 
     <div>
+        {{ headerLinkQuestion() }}
         <form method="post">
             <input type="hidden" name="_csrf" value="{{ csrfToken }}">
             
