Changing question header from macro to include

--- a/routes/question-lost-job-c19/question-lost-job-c19.njk
+++ b/routes/question-lost-job-c19/question-lost-job-c19.njk
@@ -3,7 +3,7 @@
 {% block content %}
 
     <div>
-        {{ headerLinkQuestion() }}
+        {% include "../../views/_includes/header-link-question.njk" %}
         <form method="post">
             <input type="hidden" name="_csrf" value="{{ csrfToken }}">
             
