Set min-height to max-height in the header
This was a mistake from a previous commit of mine.

--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -55,7 +55,7 @@ header {
 
   .canada-flag {
     height: auto;
-    min-height: 40px;
+    max-height: 40px;
     width: 272px;
     margin-bottom: $space-sm;
 
