--- a/routes/question-applied-to-EI/question-applied-to-EI.njk
+++ b/routes/question-applied-to-EI/question-applied-to-EI.njk
@@ -7,9 +7,9 @@
             <input type="hidden" name="_csrf" value="{{ csrfToken }}">
             
             {{ radioButtons('applied_to_EI', { 
-                '1':'You’re already receiving EI benefits.',
-                '2':'You’ve applied for EI benefits, but haven’t heard back.',
-                '3':'No.'
+                '1':'applied_to_EI.1',
+                '2':'applied_to_EI.2',
+                '3':'applied_to_EI.3'
                 }, data.applied_to_EI, 'form.applied_to_EI', errors, { required: true }) }}
 
             {{ formButtons() }}
