Functional schemas are here! With a generic error message Also removed the required design on questions, since it's only one field per page and obviously required

--- a/routes/question-applied-to-EI/question-applied-to-EI.njk
+++ b/routes/question-applied-to-EI/question-applied-to-EI.njk
@@ -9,7 +9,7 @@
                 '1':'applied_to_EI.1',
                 '2':'applied_to_EI.2',
                 '3':'applied_to_EI.3'
-                }, data.applied_to_EI, 'form.applied_to_EI', errors, { required: true }) }}
+                }, data.applied_to_EI, 'form.applied_to_EI', errors) }}
 
             {{ formButtons() }}
         </form>
