--- a/routes/question-your-situation/question-your-situation.njk
+++ b/routes/question-your-situation/question-your-situation.njk
@@ -14,7 +14,7 @@
                 '5':'your_situation.5',
                 '6':'your_situation.6',
                 '7':'your_situation.7'
-                }, data.your_situation, 'form.your_situation', errors, {hint: 'form.your_situation.desc'}, { required: true }) }}
+                }, data.your_situation, 'form.your_situation', errors, {hint: 'form.your_situation.desc'}) }}
 
             {{ formButtons() }}
         </form>
