Functional schemas are here! With a generic error message Also removed the required design on questions, since it's only one field per page and obviously required

--- a/routes/question-why-stop-working/question-why-stop-working.njk
+++ b/routes/question-why-stop-working/question-why-stop-working.njk
@@ -14,7 +14,7 @@
                 '4': 'why_stop_working.4',
                 '5': 'why_stop_working.5',
                 '6': 'why_stop_working.6'
-                }, data.why_stop_working, 'form.why_stop_working', errors, {hint: 'form.why_stop_working.desc'}, { required: true }) }}
+                }, data.why_stop_working, 'form.why_stop_working', errors, {hint: 'form.why_stop_working.desc'}) }}
             
             {{ formButtons() }}
         </form>
