--- a/views/macros/radios.njk
+++ b/views/macros/radios.njk
@@ -21,7 +21,8 @@
                 {% endif %}
                 {% for index, val in values %}
                     <div class="multiple-choice__item">
-                        <input id="{{ key }}{{ index }}" name="{{ key }}" type="radio" value="{{ val }}" {% if value == val %} checked="checked" {% endif %} {% if errors and errors[key] %} aria-describedby="{{ key + '-error' }}" aria-invalid="true" {% endif %}>
+                        <input id="{{ key }}{{ index }}" name="{{ key }}" type="radio"
+                        value="{{ val }}" {% if value == val %} checked="checked" {% endif %} {% if errors and errors[key] %} aria-describedby="{{ key + '-error' }}" aria-invalid="true" {% endif %}>
                         <label for="{{ key }}{{ index }}">{{ __(val) }}</label>
                     </div>
                 {% endfor %}
