--- a/assets/scss/_forms.scss
+++ b/assets/scss/_forms.scss
@@ -26,6 +26,9 @@ form {
     .w-1-2 {
       width: 50%;
     }
+    .w-1-3 {
+      width: 50%;
+    }
     .w-1-4 {
       width: 25%;
     }
@@ -36,6 +39,15 @@ form {
 
   @include md {
     max-width: 800px;
+
+    .w-3-4 {
+      width: 75%;
+      max-width: 29ch;
+    }
+    .w-1-2 {
+      width: 50%;
+      max-width: 19.5ch;
+    }
   }
 }
 
@@ -92,6 +104,7 @@ form {
     font-weight: 600;
     display: block;
     font-size: 1.07em;
+    margin: 0;
   }
 
   .form-message {
@@ -162,6 +175,7 @@ form {
     display: flex;
     justify-content: space-between;
     flex-direction: column;
+    max-width: 450px;
 
     .buttons--left,
     .buttons--right {
@@ -177,6 +191,26 @@ form {
       .buttons--right {
         margin-left: $space-xs;
       }
+    }
+  }
+
+  fieldset > div {
+    &.d--ib {
+      display: inline-block;
+      padding-right: $space-sm;
+      margin-bottom: 0;
+    }
+    &.w-1-2 {
+      width: 50%;
+      max-width: 19.5ch;
+    }
+    &.w-1-3 {
+      width: 50%;
+      max-width: 15ch;
+    }
+    &.w-1-4 {
+      width: 25%;
+      max-width: 7.5ch;
     }
   }
 }
