Fixing Radio Buttons
Brought in some changes for Radiobutton macro from the
CPPD-Medical-Report-Sails app

Localization must occur outside the macro, this will ensure if we do
string interpolation that the localization files won't have
post-interpelated strings added.

Added 2 new attributes to the macro options to ensure that safe text
get's rendered properly.

Renamed some items to make more sense

The macro now takes an array of objects for it's value and text for each
radio button instead of a plain json object. This fixes a bug where the
radio buttons were being displayed in an incorrect order.

Removed unused routes and views.

--- a/routes/question-applied-to-EI/question-applied-to-EI.njk
+++ b/routes/question-applied-to-EI/question-applied-to-EI.njk
@@ -5,11 +5,17 @@
         <form method="post">
             <input type="hidden" name="_csrf" value="{{ csrfToken }}">
             
-            {{ radioButtons('applied_to_EI', { 
-                '1':'You’re already receiving EI benefits.',
-                '2':'You’ve applied for EI benefits, but haven’t heard back.',
-                '3':'No.'
-                }, data.applied_to_EI, 'form.applied_to_EI', errors, { required: true }) }}
+            {{ radioButtons('applied_to_EI', 
+            [ 
+                { value: '1', text:__('You’re already receiving EI benefits.')},
+                { value: '2', text:__('You’ve applied for EI benefits, but haven’t heard back.')},
+                { value: '3', text:__('No.')}
+            ], 
+            data.applied_to_EI, 
+            __('form.applied_to_EI'), 
+            errors, 
+            { required: true }) 
+        }}
 
             {{ formButtons() }}
         </form>
