--- a/routes/question-sick-or-quarantine/question-sick-or-quarantine.njk
+++ b/routes/question-sick-or-quarantine/question-sick-or-quarantine.njk
@@ -5,7 +5,16 @@
     <div>
         <form method="post">
             <input type="hidden" name="_csrf" value="{{ csrfToken }}">
-            {{ radioButtons('sick_or_quarantine', { '1':'sick_or_quarantine.yes','2':'sick_or_quarantine.no'}, data.sick_or_quarantine, 'question.sick_or_quarantine', errors) }}
+            {{ radioButtons(
+                'sick_or_quarantine', 
+                [ 
+                    { value: '1', text: __('sick_or_quarantine.yes')},
+                    { value: '2', text: __('sick_or_quarantine.no')}
+                ], 
+                data.sick_or_quarantine,
+                __('question.sick_or_quarantine'),
+                errors
+            ) }}
             {{ formButtons() }}
         </form>
     </div>
