--- a/views/macros/radios.njk
+++ b/views/macros/radios.njk
@@ -1,28 +1,53 @@
-{% macro radioButtons(key, values, value, question, errors, attributes) %}
+{% macro radioButtons(key, values, selectedValue, question, errors, attributes) %}
     <div class="{{ 'has-error' if errors and errors[key] }}">
         <fieldset class="fieldset">
             <legend class="fieldset__legend">
-            <h1 class="border-none">
-                {% if attributes.required %}
-                    <span aria-hidden="true" class="required">*</span>
-                {% endif %}
-                {{ __(question) }}
-                {% if attributes.required %}
-                    <span class="required text-base">{{ __("required")}}</span>
-                {% endif %}
-            </h1>
+            {% if attributes.required %}
+                <span aria-hidden="true" class="required">*</span>
+            {% endif %}
+            {{ question }}
+            {% if attributes.required %}
+                <span class="required">{{ __("required")}}</span>
+            {% endif %}
             </legend>
             {% if attributes.hint %}
-                <span class="form-message">{{ __(attributes.hint) | safe }}</span>
+                <span class="form-message">
+                    {% if attributes.safeHint %}
+                        {{attributes.hint | safe }}
+                    {% else %}
+                        {{ attributes.hint }}
+                    {% endif %}
+                </span>
             {% endif %}
             <div class="multiple-choice multiple-choice--radios" id="{{ key }}">
                 {% if errors and errors[key] %}
-                    {{ validationMessage(errors[key].msg, key) }}
+                    {{ validationMessage(errors[key], key) }}
                 {% endif %}
-                {% for index, val in values %}
+                {% for item in values %}
+                {% set itemId %}{{ key }}{{ item.value }}{%endset%}
                     <div class="multiple-choice__item">
-                        <input id="{{ key }}{{ val }}" name="{{ key }}" type="radio" value="{{ val }}" {% if value == val %} checked="checked" {% endif %} {% if errors and errors[key] %} aria-describedby="{{ key + '-error' }}" aria-invalid="true" {% endif %}>
-                        <label for="{{ key }}{{ val }}">{{ __(val) }}</label>
+                        <input id="{{ itemId }}"
+                            name="{{ key }}"
+                            type="radio"
+                            value="{{ item.value }}"
+                            {% if selectedValue == item.value %}
+                                checked="checked"
+                            {% endif %}
+                            {% if errors and errors[id] %}
+                                aria-describedby="{{ id + '-error' }}"
+                                aria-invalid="true"
+                            {% endif %}
+                            {% if attributes.disabled %}
+                                disabled="disabled"
+                            {% endif %}
+                            >
+                        <label for="{{ itemId }}">
+                            {% if attributes.safe %}
+                                {{ item.text | safe }}
+                            {% else %}
+                                {{ item.text }}
+                            {% endif %}
+                        </label>
                     </div>
                 {% endfor %}
             </div>
