--- a/views/macros/radios.njk
+++ b/views/macros/radios.njk
@@ -2,13 +2,15 @@
     <div class="{{ 'has-error' if errors and errors[key] }}">
         <fieldset class="fieldset">
             <legend class="fieldset__legend">
-            {% if attributes.required %}
-                <span aria-hidden="true" class="required">*</span>
-            {% endif %}
-            {{ question }}
-            {% if attributes.required %}
-                <span class="required">{{ __("required")}}</span>
-            {% endif %}
+            <h1>
+                {% if attributes.required %}
+                    <span aria-hidden="true" class="required">*</span>
+                {% endif %}
+                {{ question }}
+                {% if attributes.required %}
+                    <span class="required">{{ __("required")}}</span>
+                {% endif %}
+            </h1>
             </legend>
             {% if attributes.hint %}
                 <span class="form-message">
@@ -21,7 +23,7 @@
             {% endif %}
             <div class="multiple-choice multiple-choice--radios" id="{{ key }}">
                 {% if errors and errors[key] %}
-                    {{ validationMessage(errors[key], key) }}
+                    {{ validationMessage(errors[key].msg, key) }}
                 {% endif %}
                 {% for item in values %}
                 {% set itemId %}{{ key }}{{ item.value }}{%endset%}
@@ -33,7 +35,7 @@
                             {% if selectedValue == item.value %}
                                 checked="checked"
                             {% endif %}
-                            {% if errors and errors[id] %}
+                            {% if errors and errors[key] %}
                                 aria-describedby="{{ key + '-error' }}"
                                 aria-invalid="true"
                             {% endif %}
