--- a/routes/question-sick-or-quarantine/question-sick-or-quarantine.njk
+++ b/routes/question-sick-or-quarantine/question-sick-or-quarantine.njk
@@ -14,7 +14,8 @@
                 ], 
                 data.sick_or_quarantine,
                 __('question.sick_or_quarantine'),
-                errors
+                errors,
+                { required: true }
             ) }}
             {{ formButtons() }}
         </form>
