Add a couple links to the footer
Pretty sure we're going to have a privacy policy and a terms and
conditions because of the text on the first page.

Linked them to the CDS website for now.

--- a/views/_includes/footer.njk
+++ b/views/_includes/footer.njk
@@ -5,6 +5,9 @@
                 <li>
                     <a href={{ __('footer.link1') }}>{{ __('footer.link1.desc') }}</a>
                 </li>
+                <li>
+                    <a href={{ __('footer.link2') }}>{{ __('footer.link2.desc') }}</a>
+                </li>
             </ul>
         </div>
         <div class="canada-wordmark">
