--- a/views/base.njk
+++ b/views/base.njk
@@ -26,6 +26,7 @@
         <a class="skip-link" href="#content">{{ __('Skip to main content') }}</a>
         <div class="outer-container">
             <header>
+                {% include "_includes/phaseBanner.njk" %}
                 {% include "_includes/fip.njk" %}
             </header>
             <main id="content">
