--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -86,7 +86,7 @@ main {
   padding-bottom: calc(#{$height-footer} + #{$space-xxl});
 
   h1 {
-    border-bottom: 1px solid $color-red;
+    margin: $space-md 0;
   }
 
   > div {
