--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -6,7 +6,7 @@ header {
   }
 
   @include sm {
-    margin-bottom: $space-xxl;
+    margin-bottom: calc(#{$space-xl} + #{$space-xl});
     text-align: right;
   }
 
