--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -11,6 +11,7 @@ $color-red: #af3c43;
 $color-red-light: #f3e9e8;
 $color-purple: #7834bc;
 $color-grey-light: #cbcbcb;
+$color-grey-medium: #909090;
 $color-grey-dark: #666666;
 
 // spacing units
