Add more space between elements on the form pages

--- a/assets/scss/_forms.scss
+++ b/assets/scss/_forms.scss
@@ -19,7 +19,6 @@ form {
       margin-bottom: 0;
     }
 
-
     .w-3-4 {
       width: 75%;
     }
@@ -70,7 +69,7 @@ form {
     margin-bottom: $space-xl;
   }
 
-  div *:last-child {
+  div *:last-child:not(h1) {
     margin-bottom: 0;
   }
 
@@ -224,6 +223,10 @@ form {
 
     * {
       margin: 0;
+    }
+
+    h1 {
+      margin-bottom: $space-xs;
     }
   }
 
