--- a/routes/start/start.njk
+++ b/routes/start/start.njk
@@ -6,7 +6,7 @@
 
     <div><p>{{ __('start.intro') | safe }}</p></div>
 
-    <h2 class="text-2xl mb-5">{{ __('start.subtitle') }}</h2>
+    <h2 class="text-2xl md:mt-12 mb-5">{{ __('start.subtitle') }}</h2>
     <div>
         <a class="button-link" href="{{ routePath(route.next) }}" role="button" draggable="false">
             {{ __('start.submit') }}
