--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -12,6 +12,8 @@ $color-red-light: #f3e9e8;
 $color-purple: #7834bc;
 $color-grey-light: #cbcbcb;
 $color-grey-dark: #666666;
+$color-green: #17A500;
+$color-green-dark: #0B4E00;
 
 // spacing units
 
