--- a/views/_includes/header-link-question.njk
+++ b/views/_includes/header-link-question.njk
@@ -1,4 +1,4 @@
 <div class="flex flex-col md:flex-row">
     <p class="flex-grow text-gray-700">{{__("header_money_for_covid")}}</p>
-    <p class="flex-none md:mx-5"><a href="{{ routePath('start') }}">{{__("start_over")}}</a></p>
+    <p class="flex-none md:mx-5"><a href="/clear">{{__("start_over")}}</a></p>
 </div>
