--- a/views/macros/buttons.njk
+++ b/views/macros/buttons.njk
@@ -1,10 +1,7 @@
-{% macro formButtons(submitButtonText = 'Continue', cancelUrl = '/clear') %}
+{% macro formButtons(submitButtonText = 'Next', cancelUrl = '/clear') %}
     <div class="buttons">
-        <div class="buttons--left">
-            <button type="submit">{{ __(submitButtonText) }}</button>
-        </div>
-        <div class="buttons--right">
-            <a class="button-link transparent full-width" href="{{ cancelUrl }}">{{ __('Cancel') }}</a>
+        <div class="next-button">
+            <button class="py-3 px-4 border shadow" type="submit">{{ __(submitButtonText) }}</button>
         </div>
     </div>
 {% endmacro %}
