add some placeholders for benefits

--- a/views/benefits/cerb.njk
+++ b/views/benefits/cerb.njk
@@ -1,2 +1,2 @@
-<h2>CERB</h2>
-<p>Description of CERB</p>
+<h2>Apply for the Canadian Emergency Response Benefit</h2>
+<p>Based on what you’ve told us, the Canadian Emergency Response Benefit (CERB) may be able to help you.</p>
