data.gst → data.rrif in the macro

--- a/routes/question-rrif/question-rrif.njk
+++ b/routes/question-rrif/question-rrif.njk
@@ -6,16 +6,16 @@
 
         <form method="post">
             <input type="hidden" name="_csrf" value="{{ csrfToken }}">
-            
-            {{ radioButtons('rrif', 
-                [ 
+
+            {{ radioButtons('rrif',
+                [
                     { value: '1', text:__('rrif.1')},
                     { value: '2', text:__('rrif.2')}
-                ], 
-                data.gst, 
-                __('form.rrif'), 
-                errors, 
-                { 
+                ],
+                data.rrif,
+                __('form.rrif'),
+                errors,
+                {
                     required: true
                 }
             )}}
