Update content on start page and add banner
Thanks to @katedee, the banner was already there.

I added some slight modifications, like changing the "i" to monospace
and shaving off a few pixels on mobile, but otherwise it was all
there and looked pretty good.

--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -87,6 +87,14 @@ main {
 
   > div {
     margin-bottom: $space-lg;
+
+    @include md {
+      width: 90%;
+    }
+
+    @include xl {
+      width: 80%;
+    }
   }
 }
 
