--- a/views/benefits/cerb.njk
+++ b/views/benefits/cerb.njk
@@ -1,2 +1,13 @@
-<h2>Apply for the Canadian Emergency Response Benefit</h2>
-<p>Based on what you’ve told us, the Canadian Emergency Response Benefit (CERB) may be able to help you.</p>
+{{ benefitResult( 
+    __("cerb.header"),
+    __("cerb.preamble"),
+    {
+        text: __("cerb.linktext"),
+        link: "#"
+    },
+    [
+        __("cerb.box1"),
+        __("cerb.box2"),
+        __("cerb.box3")
+    ]
+)}}
