--- a/views/macros/benefit-result.njk
+++ b/views/macros/benefit-result.njk
@@ -1,5 +1,5 @@
 {% macro benefitResult( header, preamble, button, boxes) %}
-<div class="m-5 p-5 shadow-md">
+<div class="m-5 p-5 shadow-lg">
     <h2 class="text-xl font-bold mb-5">{{ header }}</h2>
 
     {% for box in boxes %}
