--- a/views/benefits/mortgage_deferral.njk
+++ b/views/benefits/mortgage_deferral.njk
@@ -1,1 +1,11 @@
-<h2>Contact your bank to delay mortgage payments</h2>
+{{ benefitResult( 
+    __("mortgage_deferral.header"),
+    __("mortgage_deferral.preamble"),
+    {
+        text: __("mortgage_deferral.linktext"),
+        link: "#"
+    },
+    [
+        __("mortgage_deferral.box1")
+    ]
+)}}
