--- a/views/benefits/rrif.njk
+++ b/views/benefits/rrif.njk
@@ -1,2 +1,8 @@
-<h2>Lower mandatory withdrawals for your Registered Retirement Income Fund (RRIF)</h2>
-<p></p>
+{{ benefitResult( 
+    __("rrif.header"),
+    __("rrif.preamble"),
+    {
+        text: __("rrif.linktext"),
+        link: "#"
+    }
+)}}
