--- a/views/benefits/ccb_payment.njk
+++ b/views/benefits/ccb_payment.njk
@@ -1,4 +1,12 @@
-<h2>Extra payment from Canada Child Benefit</h2>
-<p>If you care for a child under 18, you will receive a one-time payment of $300 per child in May through the Canada Child Benefit.</p>
-
-<p>Check your bank account to find out if you’ve been receiving the Canada Child Benefit. Dates of payments are available online.</p>
+{{ benefitResult( 
+    __("ccb_payment.header"),
+    __("ccb_payment.preamble"),
+    {
+        text: __("ccb_payment.linktext"),
+        link: "#"
+    },
+    [
+        __("ccb_payment.box1"),
+        __("ccb_payment.box2")
+    ]
+)}}
