--- a/views/benefits/gst_credit.njk
+++ b/views/benefits/gst_credit.njk
@@ -1,8 +1,12 @@
-<h2>More money through the GST credit</h2>
-<p>If you receive the GST credit, you will receive a one-time payment in May:</p>
-<ul>
-    <li>$400 for single people</li>
-    <li>$600 for couples.</li>
-</ul>
-
-<p>Check your bank account to find out if you’ve been receiving the GST credit. Dates of payments are available online.</p>
+{{ benefitResult( 
+    __("gst_credit.header"),
+    __("gst_credit.preamble"),
+    {
+        text: __("gst_credit.linktext"),
+        link: "#"
+    },
+    [
+        __("gst_credit.box1"),
+        __("gst_credit.box2")
+    ]
+)}}
