--- a/views/benefits/rent_help.njk
+++ b/views/benefits/rent_help.njk
@@ -1,2 +1,8 @@
-<h2>You cannot be evicted</h2>
-<p></p>
+{{ benefitResult( 
+    __("rent_help.header"),
+    __("rent_help.preamble"),
+    {
+        text: __("rent_help.linktext"),
+        link: "#"
+    }
+)}}
