--- a/views/_includes/header-link-question.njk
+++ b/views/_includes/header-link-question.njk
@@ -1,4 +1,4 @@
-<div class="flex flex-col md:flex-row">
-    <p class="service-name flex-grow text-gray-700 text-2xl">{{__("header_money_for_covid")}}</p>
-    <p class="flex-none text-lg md:ml-5"><a href="/clear">{{__("start_over")}}</a></p>
+<div class="flex flex-col sm:flex-row w-full mb-5 sm:mb-6">
+    <p class="flex-grow text-gray-600 text-2xl mb-1">{{__("app.title")}}</p>
+    <p class="flex-none text-lg sm:ml-5"><a href="/clear">{{__("start_over")}}</a></p>
 </div>
