--- a/routes/question-gross-income/question-gross-income.njk
+++ b/routes/question-gross-income/question-gross-income.njk
@@ -2,8 +2,8 @@
 
 {% block content %}
 
+    {% include "../../views/_includes/header-link-question.njk" %}
     <div>
-
         <form method="post">
             <input type="hidden" name="_csrf" value="{{ csrfToken }}">
 
