--- a/routes/question-student-debt/question-student-debt.njk
+++ b/routes/question-student-debt/question-student-debt.njk
@@ -2,19 +2,20 @@
 
 {% block content %}
 
+    {% include "../../views/_includes/header-link-question.njk" %}
     <div>
         <form method="post">
             <input type="hidden" name="_csrf" value="{{ csrfToken }}">
-            
-            {{ radioButtons('student_debt', 
-                [ 
+
+            {{ radioButtons('student_debt',
+                [
                     { value: '1', text:__('student_debt.1')},
                     { value: '2', text:__('student_debt.2')}
-                ], 
-                data.student_debt, 
-                __('form.student_debt'), 
-                errors, 
-                { required: true }) 
+                ],
+                data.student_debt,
+                __('form.student_debt'),
+                errors,
+                { required: true })
             }}
             {{ formButtons() }}
         </form>
