--- a/routes/question-your-situation-no-income/question-your-situation-no-income.njk
+++ b/routes/question-your-situation-no-income/question-your-situation-no-income.njk
@@ -2,23 +2,23 @@
 
 {% block content %}
 
+    {% include "../../views/_includes/header-link-question.njk" %}
     <div>
         <form method="post">
             <input type="hidden" name="_csrf" value="{{ csrfToken }}">
-            
-            {{ radioButtons('no_income', 
-                [ 
+            {{ radioButtons('no_income',
+                [
                     { value: '1', text:__('your_situation.no_income.1')},
                     { value: '2', text:__('your_situation.no_income.2')},
                     { value: '3', text:__('your_situation.no_income.3')},
                     { value: '4', text:__('your_situation.no_income.4')},
                     { value: '5', text:__('your_situation.no_income.5')},
                     { value: '6', text:__('your_situation.no_income.6')}
-                ], 
-                data.your_situation.no_income, 
-                __('form.your_situation.no_income'), 
-                errors, 
-                { required: true }) 
+                ],
+                data.your_situation.no_income,
+                __('form.your_situation.no_income'),
+                errors,
+                { required: true })
             }}
             {{ formButtons() }}
         </form>
