--- a/routes/question-your-situation-some-income/question-your-situation-some-income.njk
+++ b/routes/question-your-situation-some-income/question-your-situation-some-income.njk
@@ -2,20 +2,21 @@
 
 {% block content %}
 
+    {% include "../../views/_includes/header-link-question.njk" %}
     <div>
         <form method="post">
             <input type="hidden" name="_csrf" value="{{ csrfToken }}">
-            
-            {{ radioButtons('some_income', 
-                [ 
+
+            {{ radioButtons('some_income',
+                [
                     { value: '1', text:__('your_situation.some_income.1')},
                     { value: '2', text:__('your_situation.some_income.2')},
                     { value: '3', text:__('your_situation.some_income.3')}
-                ], 
-                data.your_situation.some_income, 
-                __('form.your_situation.some_income'), 
-                errors, 
-                { required: true }) 
+                ],
+                data.your_situation.some_income,
+                __('form.your_situation.some_income'),
+                errors,
+                { required: true })
             }}
             {{ formButtons() }}
         </form>
