add debug info and remove hr

--- a/routes/results/results.njk
+++ b/routes/results/results.njk
@@ -3,10 +3,12 @@
 {% block content %}
 
     <h1>You have {{ benefits.length }} benefits available for you</h1>
+
+    <p class="bg-red-200 p-4">Eligible for: {{ benefits }}</p>
+    
     <div>
         {% for benefit in benefits %}
             {% include "benefits/" + benefit + ".njk" %}
-            <hr class="my-4">
         {% endfor %}
     </div>
 
