Add content for the last two benefit results EI sickness + CERB Ei Regular + CERB

--- a/views/benefits/ei_sickness_cerb.njk
+++ b/views/benefits/ei_sickness_cerb.njk
@@ -1,1 +1,11 @@
-<h2>EI Sickness + CERB</h2>
+{{ benefitResult( 
+    __("ei_sickness_and_cerb.header"),
+    __("ei_sickness_and_cerb.preamble"),
+    {
+        text: __("ei_sickness_and_cerb.linktext"),
+        link: "#"
+    },
+    [
+        __("ei_sickness_and_cerb.box1")
+    ]
+)}}
