--- a/views/benefits/ei_regular_cerb.njk
+++ b/views/benefits/ei_regular_cerb.njk
@@ -1,1 +1,11 @@
-<h2>EI Regular + CERB</h2>
+{{ benefitResult( 
+    __("ei_regular_and_cerb.header"),
+    __("ei_regular_and_cerb.preamble"),
+    {
+        text: __("ei_regular_and_cerb.linktext"),
+        link: "#"
+    },
+    [
+        __("ei_regular_and_cerb.box1")
+    ]
+)}}
