--- a/routes/question-gst/question-gst.njk
+++ b/routes/question-gst/question-gst.njk
@@ -10,7 +10,8 @@
             {{ radioButtons('gst',
                 [
                     { value: '1', text:__('gst.1')},
-                    { value: '2', text:__('gst.2')}
+                    { value: '2', text:__('gst.2')},
+                    { value: '3', text:__('gst.3')}
                 ],
                 data.gst,
                 __('form.gst'),
