fix radio button selected item

--- a/routes/question-your-situation-no-income/question-your-situation-no-income.njk
+++ b/routes/question-your-situation-no-income/question-your-situation-no-income.njk
@@ -15,7 +15,7 @@
                     { value: '5', text:__('your_situation.no_income.5')},
                     { value: '6', text:__('your_situation.no_income.6')}
                 ],
-                data.your_situation.no_income,
+                data.no_income,
                 __('form.your_situation.no_income'),
                 errors,
                 { required: true })
