--- a/views/benefits/ei_sickness_cerb.njk
+++ b/views/benefits/ei_sickness_cerb.njk
@@ -1,5 +1,6 @@
 {{ benefitResult( 
-    __("ei_sickness_and_cerb.header"),
+    "ei_sickness_cerb",
+    __("ei_sickness_cerb.header"),
     __("ei_sickness_and_cerb.preamble"),
     {
         text: __("ei_sickness_and_cerb.linktext"),
