--- a/views/benefits/ei_regular_cerb.njk
+++ b/views/benefits/ei_regular_cerb.njk
@@ -1,5 +1,6 @@
 {{ benefitResult( 
-    __("ei_regular_and_cerb.header"),
+    "ei_regular_cerb",
+    __("ei_regular_cerb.header"),
     __("ei_regular_and_cerb.preamble"),
     {
         text: __("ei_regular_and_cerb.linktext"),
