--- a/views/macros/radios.njk
+++ b/views/macros/radios.njk
@@ -2,15 +2,7 @@
     <div class="{{ 'has-error' if errors and errors[key] }}">
         <fieldset class="fieldset">
             <legend class="fieldset__legend">
-            <h1 class="text-3xl md:text-4xl">
-                {% if attributes.required %}
-                    <span aria-hidden="true" class="required">*</span>
-                {% endif %}
-                {{ question }}
-                {% if attributes.required %}
-                    <span class="required">{{ __("required")}}</span>
-                {% endif %}
-            </h1>
+            <h1 class="text-3xl md:text-4xl">{% if attributes.required %}<span aria-hidden="true" class="required">*</span>{% endif %} {{ question }} {% if attributes.required %} <span class="required">{{ __("required")}}</span>{% endif %}</h1>
             </legend>
             {% if attributes.hint %}
                 <span class="form-message">
