Update the results page

--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -42,6 +42,14 @@ ul {
   }
 }
 
+p + ul {
+  margin-top: -$space-xs;
+
+  @include xs {
+    margin-top: -$space-sm;
+  }
+}
+
 ol,
 ul {
   padding-left: $space-md;
