--- a/routes/results/results.njk
+++ b/routes/results/results.njk
@@ -13,7 +13,7 @@
         {% endfor %}
     </ul>
     {% endif %}
-    <div>
+    <div class="mt-10">
         {% for benefit in benefits %}
             {% include "benefits/" + benefit + ".njk" %}
         {% endfor %}
