--- a/routes/results/results.njk
+++ b/routes/results/results.njk
@@ -19,6 +19,6 @@
         {% endfor %}
     </div>
 
-    <p class="bg-red-200 p-4">(debug): {{ benefits }}</p>
+    <p class="bg-red-200 p-4 hidden">(debug): {{ benefits }}</p>
 
 {% endblock %}
