convert ccb value to meaningful strings

--- a/routes/question-ccb/question-ccb.njk
+++ b/routes/question-ccb/question-ccb.njk
@@ -10,9 +10,9 @@
             {{ radioButtons(
                 'ccb',
                 [
-                    { value: '1', text:__('ccb.1')},
-                    { value: '2', text:__('ccb.2')},
-                    { value: '3', text:__('ccb.3')}
+                    { value: 'yes', text:__('ccb.1')},
+                    { value: 'no', text:__('ccb.2')},
+                    { value: 'unsure', text:__('ccb.3')}
                 ],
                 data.ccb,
                 __('form.ccb'),
