--- a/routes/question-days-stopped-working/question-days-stopped-working.njk
+++ b/routes/question-days-stopped-working/question-days-stopped-working.njk
@@ -10,8 +10,8 @@
             {{ radioButtons(
                 'days_stopped_working',
                 [
-                    { value: '1', text:__('days_stopped_working.1')},
-                    { value: '2', text:__('days_stopped_working.2')}
+                    { value: '<14days', text:__('days_stopped_working.1')},
+                    { value: '>14days', text:__('days_stopped_working.2')}
                 ],
                 data.days_stopped_working,
                 __('form.days_stopped_working'),
