convert gross_income value to meaningful strings

--- a/routes/question-gross-income/question-gross-income.njk
+++ b/routes/question-gross-income/question-gross-income.njk
@@ -10,9 +10,9 @@
             {{ radioButtons(
                 'gross_income',
                 [
-                    { value: '1', text:__('gross_income.1')},
-                    { value: '2', text:__('gross_income.2')},
-                    { value: '3', text:__('gross_income.3')}
+                    { value: 'under3k', text:__('gross_income.1')},
+                    { value: '3k-5k', text:__('gross_income.2')},
+                    { value: '5k+', text:__('gross_income.3')}
                 ],
                 data.gross_income,
                 __('form.gross_income'),
