convert gst values to meaningful strings

--- a/routes/question-gst/question-gst.njk
+++ b/routes/question-gst/question-gst.njk
@@ -9,9 +9,9 @@
 
             {{ radioButtons('gst',
                 [
-                    { value: '1', text:__('gst.1')},
-                    { value: '2', text:__('gst.2')},
-                    { value: '3', text:__('gst.3')}
+                    { value: 'yes', text:__('gst.1')},
+                    { value: 'no', text:__('gst.2')},
+                    { value: 'unsure', text:__('gst.3')}
                 ],
                 data.gst,
                 __('form.gst'),
