convert rrif values to meaningful strings

--- a/routes/question-rrif/question-rrif.njk
+++ b/routes/question-rrif/question-rrif.njk
@@ -9,8 +9,8 @@
 
             {{ radioButtons('rrif',
                 [
-                    { value: '1', text:__('rrif.1')},
-                    { value: '2', text:__('rrif.2')}
+                    { value: 'yes', text:__('rrif.1')},
+                    { value: 'no', text:__('rrif.2')}
                 ],
                 data.rrif,
                 __('form.rrif'),
