convert student_debt values to meaningful strings

--- a/routes/question-student-debt/question-student-debt.njk
+++ b/routes/question-student-debt/question-student-debt.njk
@@ -9,8 +9,8 @@
 
             {{ radioButtons('student_debt',
                 [
-                    { value: '1', text:__('student_debt.1')},
-                    { value: '2', text:__('student_debt.2')}
+                    { value: 'yes', text:__('student_debt.1')},
+                    { value: 'no', text:__('student_debt.2')}
                 ],
                 data.student_debt,
                 __('form.student_debt'),
