convert some_income values to meaningful strings

--- a/routes/question-your-situation-some-income/question-your-situation-some-income.njk
+++ b/routes/question-your-situation-some-income/question-your-situation-some-income.njk
@@ -9,9 +9,9 @@
 
             {{ radioButtons('some_income',
                 [
-                    { value: '1', text:__('your_situation.some_income.1')},
-                    { value: '3', text:__('your_situation.some_income.3')},
-                    { value: '2', text:__('your_situation.some_income.2')}
+                    { value: 'hours-reduced', text:__('your_situation.some_income.1')},
+                    { value: 'employed-lost-a-job', text:__('your_situation.some_income.3')},
+                    { value: 'retired', text:__('your_situation.some_income.2')}
                 ],
                 data.your_situation.some_income,
                 __('form.your_situation.some_income'),
